Various Fixes: – Token parameter type. — Doc styling. — GetSalesByToken not found. — Payments creation response.
