# pkg/controller/payment_controller.go
@@ -15,18 +15,15 @@ type paymentRequestBody struct {
 	Token          string `json:"token"`
 }
 
-type paymentResponseBody struct {
-	Result string `json:"result"`
-}
-
 // CreatePayment godoc
-// @Summary      Creates a payment
-// @Tags         payment
-// @Accept       json
-// @Produce      json
-// @Param body body paymentRequestBody true "request body"
-// @Success      200  {object}  paymentResponseBody
-// @Router       /payment [post]
+// @Summary  Creates a payment
+// @Tags     Payments
+// @Accept   json
+// @Produce  json
+// @Param    body  body  paymentRequestBody  true  "Request Body"
+// @Success  201
+// @Failure  400  {object}  map[string]string
+// @Router   /payment [post]
 func CreatePayment(c *gin.Context) {
 	var body paymentRequestBody
 	if err := c.BindJSON(&body); err != nil {
@@ -34,8 +31,6 @@ func CreatePayment(c *gin.Context) {
 		return
 	}
 
-	// TODO: esta bien identificar a las sales por token y no por id?
-	// si una persona hacer varias reservas recibe distintos tokens
 	salesList, err := sales.GetSalesByToken(body.Token)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
@@ -64,7 +59,5 @@ func CreatePayment(c *gin.Context) {
 		}
 	}
 
-	c.JSON(http.StatusOK, paymentResponseBody{
-		Result: "Payment successful",
-	})
+	c.Status(http.StatusCreated)
 }
